--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/iamninja/angular2-quickstart-tutorial#readme",
   "dependencies": {
     "angular2": "2.0.0-alpha.44",
+    "es5-shim": "^4.3.1",
+    "es6-shim": "^0.33.13",
     "systemjs": "0.19.2"
   },
   "devDependencies": {
