--- a/package.json
+++ b/package.json
@@ -1,31 +1,42 @@
 {
   "name": "angular2-quickstart",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "tsc": "tsc -p src -w",
-    "start": "live-server --open=src"
-  },
+  "description": "Angular2 seed project based on official quickstart.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/iamninja/angular2-quickstart-tutorial.git"
+    "url": "https://github.com/iamninja/angular2-quickstart-tutorial"
   },
-  "keywords": [],
-  "author": "",
+  "version": "0.0.1",
+  "scripts": {
+    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
+    "lite": "lite-server",
+    "postinstall": "typings install",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "typings": "typings"
+  },
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/iamninja/angular2-quickstart-tutorial/issues"
-  },
-  "homepage": "https://github.com/iamninja/angular2-quickstart-tutorial#readme",
   "dependencies": {
-    "angular2": "2.0.0-alpha.44",
-    "es5-shim": "^4.3.1",
-    "es6-shim": "^0.33.13",
-    "systemjs": "0.19.2"
+    "@angular/common":  "2.0.0-rc.1",
+    "@angular/compiler":  "2.0.0-rc.1",
+    "@angular/core":  "2.0.0-rc.1",
+    "@angular/http":  "2.0.0-rc.1",
+    "@angular/platform-browser":  "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic":  "2.0.0-rc.1",
+    "@angular/router":  "2.0.0-rc.1",
+    "@angular/router-deprecated":  "2.0.0-rc.1",
+    "@angular/upgrade":  "2.0.0-rc.1",
+    "systemjs": "0.19.27",
+    "core-js": "^2.4.0",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "^0.6.12",
+    "angular2-in-memory-web-api": "0.0.10",
+    "bootstrap": "^3.3.6"
   },
   "devDependencies": {
-    "live-server": "^0.8.2",
-    "typescript": "^1.6.2"
+    "concurrently": "^2.0.0",
+    "lite-server": "^2.2.0",
+    "typescript": "^1.8.10",
+    "typings":"^1.0.4"
   }
 }
